# Bases-de-programacion-Carlos-Garcia

./: CMakeLists.txt  README.md  main.cpp
array/: uso_arrays.cpp  uso_arrays.h
bucle/: bucle_for.cpp
bucle/desalto/: Desalto.cpp  Desalto.h
bucle/do/: bucledo.cpp  bucledo.h
bucle/for/: bucle_for.h
bucle/while/: buclewhile.cpp  buclewhile.h
funciones/:  declaracion_funcion.cpp  declaracion_funcion.h
funcionesyprototipos/: funciones.cpp  funciones.h
instruciones/: instrucciones_prueba.cpp  instrucciones_prueba.h
instruciones/instruciones_prueba/: 1.cpp  1.h
instruciones/operadores/: 2.cpp  2.h
punteros/: todoslospunteros.cpp  todoslospunteros.h
variables/: utilidad_variables.cpp  utilidad_variables.h
variables/Ambito_de_las_variables/: Ambitodevariable.cpp  Ambitodevariable.h
variables/sintaxis/: sintaxis.cpp  sintaxis.h
variables/tipos_de_datos/: datos.cpp  datos.h
